# OpenCV_Projects

./: .gitignore  README.md
projects/Color_Picker/: CMakeLists.txt
projects/Color_Picker/src/: ColorPicker.cpp  ColorPicker.hpp  main.cpp
projects/Documents_Scanner/: CMakeLists.txt
projects/Documents_Scanner/src/: main.cpp
projects/Russian_Number_Plate_Detector/: CMakeLists.txt
projects/Russian_Number_Plate_Detector/src/: main.cpp
projects/Virtual_Painter/: CmakeLists.txt
projects/Virtual_Painter/src/: HSVCalibrator.cpp  HSVCalibrator.hpp  VirtualPainter.cpp  VirtualPainter.hpp  main.cpp
